--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,19 +81,10 @@
 
             <!-- Nav Item - Cadastro Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTelasdeGerenciamento"
-                    aria-expanded="true" aria-controls="collapseTelasdeGerenciamento">
-                    <span>Telas de Gerenciamento</span>
+                <a class="nav-link" href="tela-gerenciamento.html">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Tela de Gerenciamento</span>
                 </a>
-                <div id="collapseTelasdeGerenciamento" class="collapse" aria-labelledby="headingTelasdeGerenciamento"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="tela-gerenciamento.html" style="margin: 0 !important;">Gerenciamento de Mudas</a>
-                        <a class="collapse-item" href="gerenciamento-regiao.html" style="margin: 0 !important;">Gerenciamento de Regiões</a>
-                        <a class="collapse-item" href="gerenciamento-biomas.html" style="margin: 0 !important;">Gerenciamento de Biomas</a>
-                        <a class="collapse-item" href="gerenciamento-solos.html" style="margin: 0 !important;">Gerenciamento de Solos</a>
-                    </div>
-                </div>
             </li>
 
             <hr class="sidebar-divider d-none d-md-block">
