--- a/src/main/resources/templates/cadastro-regiao.html
+++ b/src/main/resources/templates/cadastro-regiao.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="read()">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -163,29 +163,55 @@
                                     <div class="col-lg-2 d-none d-lg-block"></div>
                                     <div class="col-lg-8">
                                         <div class="p-5">
-                                            <form class="user">
-                                                <div class="form-group row">
-                                                    <div class="col-sm-12">
-                                                        <input type="text" class="form-control form-control-user" id="regiao" placeholder="Digite o nome da Região ...">
-                                                    </div>
-                                                </div>                                                
-                                                <br>
+
+                                            <div class="form-group row">
                                                 <div class="col-sm-12">
-                                                    <input type="submit" class="btn btn-success btn-user btn-block" value="Registrar Região">
+                                                    <input type="text" class="form-control form-control-user" id="regiao" placeholder="Digite o nome da Região ...">
                                                 </div>
-                                            </form>                                            
+                                            </div>
+                                            <br>
+                                            <div class="col-sm-12">
+                                                <button class="btn btn-success btn-user btn-block" onclick="create()">Registrar Região</button>
+
+                                            </div>
+
                                         </div>
                                     </div>
                                     <div class="col-lg-2 d-none d-lg-block"></div>
                                 </div>
-                            </div>                                                  
+                            </div>
                         </div>
                     </div>
                     <br>
 
                 </div>
                 <!-- /.container-fluid -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold" style="text-align: center;">Gerenciamento de Regiões</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" style="text-align: center;">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Região</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody v-for ="regiao in regioes">
+                                    <tr>
+                                        <th>{{regiao.id}}</th>
+                                        <th>{{regiao.nomeRegiao}}</th>
+                                        <th><a href="#" @click="deleta(regiao.id)" class="btn btn-danger">Delete</a></th>
+                                    </tr>
+                                </tbody>
 
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- End of Main Content -->
 
@@ -230,6 +256,63 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        ///CRUD
+        function create() {
+
+            var dados = {nomeRegiao: document.getElementById("regiao").value};
+            console.log(dados);
+            axios({
+                method: 'post',
+                url: 'http://localhost:8080/regioes',
+                data: {nomeRegiao: document.getElementById("regiao").value}
+        
+            }).catch((error) => console.log(error));
+            window.location.reload();
+
+            //read();
+            document.location.reload(true);
+            
+        }
+
+        function read() {
+            var app = new Vue(
+			{
+					el : '#dataTable',
+					data : {
+						regioes : []
+					},
+					mounted () {
+						axios.get('http://localhost:8080/regioes').then(response => (this.regioes = response.data));
+					},
+                    methods: {
+                        deleta: function(idRegiao) {
+                            console.log(idRegiao);
+                            axios({
+                                method: 'delete',
+                                url: 'http://localhost:8080/regioes/' + idRegiao
+                            }).catch((error) => console.log(error));
+                            window.location.reload();
+
+                        }
+                    }
+                                    
+			});
+
+        }
+
+        function update(idRegiao) {
+            axios({
+                method: 'put',
+                url: 'http://localhost:8080/regioes/' + idRegiao,
+                data: {
+                    regiaonomeRegiao: document.getElementById("regiao").value
+                }
+            }).catch((error) => console.log(error));
+        }
+
+    </script>
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -246,6 +329,12 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="render.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 </body>
 
