--- a/src/main/resources/templates/cadastro-familias.html
+++ b/src/main/resources/templates/cadastro-familias.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="read()">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -66,7 +66,7 @@
                         <a class="collapse-item" href="cadastro-regiao.html">Cadastro de Regiões</a>
                         <a class="collapse-item" href="cadastro-biomas.html">Cadastro de Biomas</a>
                         <a class="collapse-item" href="cadastro-solos.html">Cadastro de Solos</a>                        
-                        <a class="collapse-item active" href="cadastro-familia.html">Cadastro de Famílias</a>     
+                        <a class="collapse-item active" href="cadastro-familias.html">Cadastro de Famílias</a>     
                     </div>
                 </div>
             </li>
@@ -163,17 +163,15 @@
                                     <div class="col-lg-2 d-none d-lg-block"></div>
                                     <div class="col-lg-8">
                                         <div class="p-5">
-                                            <form class="user">
-                                                <div class="form-group row">
-                                                    <div class="col-sm-12">
-                                                        <input type="text" class="form-control form-control-user" id="familia" placeholder="Digite o nome da Família ...">
-                                                    </div>
-                                                </div>                                                
-                                                <br>
+                                            <div class="form-group row">
                                                 <div class="col-sm-12">
-                                                    <input type="submit" class="btn btn-success btn-user btn-block" value="Registrar Família">
+                                                    <input type="text" class="form-control form-control-user" id="familia" placeholder="Digite o nome da Familia ...">
                                                 </div>
-                                            </form>                                            
+                                            </div>
+                                            <br>
+                                            <div class="col-sm-12">
+                                                <button class="btn btn-success btn-user btn-block" onclick="create()">Registrar Familia</button>
+                                            </div>                                          
                                         </div>
                                     </div>
                                     <div class="col-lg-2 d-none d-lg-block"></div>
@@ -185,7 +183,32 @@
 
                 </div>
                 <!-- /.container-fluid -->
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold" style="text-align: center;">Gerenciamento de Famílias</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" style="text-align: center;">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Família</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody v-for ="familia in familias">
+                                    <tr>
+                                        <th>{{familia.id}}</th>
+                                        <th>{{familia.nameFamilia}}</th>
+                                        <th><a href="#" @click="deleta(familia.id)" class="btn btn-danger">Delete</a></th>
+                                    </tr>
+                                </tbody>
 
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- End of Main Content -->
 
@@ -230,6 +253,62 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        ///CRUD
+        function create() {
+
+            var dados = {nameFamilia: document.getElementById("familia").value};
+            console.log(dados);
+            axios({
+                method: 'post',
+                url: 'http://localhost:8080/familias',
+                data: {nameFamilia: document.getElementById("familia").value}
+        
+            }).catch((error) => console.log(error));
+            window.location.reload();
+
+            document.location.reload(true);
+            
+        }
+
+        function read() {
+            var app = new Vue(
+			{
+					el : '#dataTable',
+					data : {
+						familias : []
+					},
+					mounted () {
+						axios.get('http://localhost:8080/familias').then(response => (this.familias = response.data));
+					},
+                    methods: {
+                        deleta: function(idFamilia) {
+                            console.log(idFamilia);
+                            axios({
+                                method: 'delete',
+                                url: 'http://localhost:8080/familias/' + idFamilia
+                            }).catch((error) => console.log(error));
+                            window.location.reload();
+
+                        }
+                    }
+                                    
+			});
+
+        }
+
+        function update(idFamilia) {
+            axios({
+                method: 'put',
+                url: 'http://localhost:8080/familias/' + idFamilia,
+                data: {
+                    familianameFamilia: document.getElementById("familia").value
+                }
+            }).catch((error) => console.log(error));
+        }
+
+    </script>
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -246,6 +325,12 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="render.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 </body>
 
