--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
                         <a class="collapse-item" href="cadastro-regiao.html">Cadastro de Regiões</a>
                         <a class="collapse-item" href="cadastro-biomas.html">Cadastro de Biomas</a>
                         <a class="collapse-item" href="cadastro-solos.html">Cadastro de Solos</a>                        
-                        <a class="collapse-item" href="cadastro-familia.html">Cadastro de Famílias</a>     
+                        <a class="collapse-item" href="cadastro-familias.html">Cadastro de Famílias</a>     
                     </div>
                 </div>
             </li>
