--- a/src/main/resources/templates/cadastro-especie.html
+++ b/src/main/resources/templates/cadastro-especie.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="read()">
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -173,21 +173,15 @@
                                                 <div class="form-group row">
                                                     <div class="card shadow mb-4 col-md-12" style="padding-left: 0px !important; padding-right: 0px !important;">
                                                         <!-- Card Header -->
-                                                        <a href="#collapseCardExample" class="d-block card-header py-3 collapsed" data-toggle="collapse"
-                                                            role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                                                            <h6 class="m-0 font-weight-bold" style="color: #858796;">Selecione a Família</h6>
+                                                        <a href="#radiofamilia" class="d-block card-header py-3 collapsed" data-toggle="collapse"
+                                                            role="button" aria-expanded="true" aria-controls="collapseCardExample5">
+                                                            <h6 class="m-0 font-weight-bold" style="color: #858796;">Famílias</h6>
                                                         </a>
                                                         <!-- Card Content -->
-                                                        <div class="collapse" id="collapseCardExample">
-                                                            <div class="card-body">
-                                                                <input type="checkbox" class="" id="familia1">
-                                                                <label for="item1">Família 1</label><br>
-                                                                <input type="checkbox" class="" id="familia2">
-                                                                <label for="item2">Família 2</label><br>
-                                                                <input type="checkbox" class="" id="familia3">
-                                                                <label for="item3">Família 3</label><br>
-                                                                <input type="checkbox" class="" id="familia4">
-                                                                <label for="item4">Família 4</label><br>
+                                                        <div class="collapse" id="radiofamilia">
+                                                            <div class="card-body" v-for ="familia in familias">
+                                                                <input @click="seleciona(familia.id)" type="radio" id="familia.id" name="gender" value="familia.id">
+                                                                <label for="familia.nameFamilia">{{familia.nameFamilia}}</label><br>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -253,6 +247,67 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+        ///CRUD
+        function create() {
+
+            var dados = {nameFamilia: document.getElementById("familia").value};
+            console.log(dados);
+            axios({
+                method: 'post',
+                url: 'http://localhost:8080/familias',
+                data: {nameFamilia: document.getElementById("familia").value}
+        
+            }).catch((error) => console.log(error));
+            window.location.reload();
+
+            document.location.reload(true);
+            
+        }
+
+        function read() {
+            var app = new Vue(
+			{
+					el : '#radiofamilia',
+					data : {
+						familias : [],
+                        selectId: 0
+					},
+					mounted () {
+						axios.get('http://localhost:8080/familias').then(response => (this.familias = response.data));
+					},
+                    methods: {
+                        deleta: function(idFamilia) {
+                            console.log(idFamilia);
+                            axios({
+                                method: 'delete',
+                                url: 'http://localhost:8080/familias/' + idFamilia
+                            }).catch((error) => console.log(error));
+                            window.location.reload();
+
+                        },
+                        seleciona: function(idFamilia){
+                            this.selectId = idFamilia;
+                            console.log(this.selectId);
+                        }
+                    }
+                                    
+			});
+
+        }
+
+        function update(idFamilia) {
+            axios({
+                method: 'put',
+                url: 'http://localhost:8080/familias/' + idFamilia,
+                data: {
+                    familianameFamilia: document.getElementById("familia").value
+                }
+            }).catch((error) => console.log(error));
+        }
+
+    </script>
+
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -269,6 +324,12 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <script src="https://unpkg.com/mustache@latest"></script>
+    <script src="render.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 </body>
 
